--- a/website/.gitignore
+++ b/website/.gitignore
@@ -1,12 +1,7 @@
 .DS_Store
 
+translated_docs
+build/
+yarn.lock
 node_modules
-
-lib/core/metadata.js
-lib/core/MetadataBlog.js
-
-website/translated_docs
-website/build/
-website/yarn.lock
-website/node_modules
-website/i18n/*
+i18n/*
